# dfxm-geo-mcp

./: .gitignore  README.md  pyproject.toml  server.json
.github/workflows/: publish.yml
docs/: manual-verify-inline-preview.md  manual-verify-rocking-viewer.md
docs/img/: README.md
docs/superpowers/plans/: 2026-06-17-dfxm-geo-mcp-server.md  2026-06-18-inline-forward-preview-mcp-apps.md  2026-06-18-rocking-curve-html-viewer.md  2026-06-18-weak-beam-default-and-annotated-preview.md  2026-06-19-predict-visibility.md
docs/superpowers/specs/: 2026-06-17-dfxm-geo-mcp-server-design.md  2026-06-18-inline-forward-preview-mcp-apps-design.md  2026-06-18-predict-visibility-design.md  2026-06-18-weak-beam-default-and-annotated-preview-design.md
src/dfxm_geo_mcp/: __init__.py  _kernel_worker.py  jobs.py  kernels.py  runtime.py  server.py
src/dfxm_geo_mcp/knowledge/: schema.py
src/dfxm_geo_mcp/ops/: forward.py  reflections.py  rocking.py  scaffold.py  types.py  validate.py  (+1 more)
tests/: test_jobs.py  test_kernels.py  test_kernels_bootstrap.py  test_knowledge.py  test_ops_forward.py  test_ops_reflections.py  test_ops_rocking.py  test_ops_scaffold.py  test_ops_types.py  test_ops_validate.py  test_ops_visibility.py  test_pixel_aspect.py  test_run_forward_output_path.py  test_runtime.py  test_runtime_paths.py  test_server_inline_preview.py  test_server_integration.py  test_server_rocking.py  test_server_stdio.py  test_server_visibility.py  test_smoke.py  test_ui_forward_html.py  test_ui_forward_preview.py  test_ui_visibility_html.py  test_visibility_types.py  test_weak_beam_e2e.py
(+6 files in other folders)
